--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/esseEuJaLi
 spring.datasource.username=postgres
-spring.datasource.password=tartarugo:le
+spring.datasource.password=postgres
 
 
 spring.datasource.initialization-mode=always
